worked on create route form and fixed dashboard layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -293,8 +293,8 @@ hr {
   width: 100%;
 }
 
-.route-form>div {
-  margin: 15px;
+form > div {
+  margin: 15px 0;
 }
 
 .form-label {
@@ -484,6 +484,7 @@ div.checkbox input {
 
 .spons-text {
   flex: 2 2 60%;
+  margin: 0 15px;
 }
 
 .spons img {
@@ -505,7 +506,7 @@ div.checkbox input {
   table-layout: auto;
   width: auto;
   border-collapse: collapse;
-  max-width: 60%;
+  max-width: 50%;
 }
 
 #route-points .three-column {
@@ -527,6 +528,7 @@ div.checkbox input {
 
 #route-points td {
   padding: 4px 10px;
+  border: 1px solid gray;
 }
 
 #route-points table tr:nth-child(odd) {
@@ -540,7 +542,7 @@ div.checkbox input {
 article.bike-route {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-content: flex-start;
   margin: 20px auto;
   box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 0.25);
@@ -559,20 +561,23 @@ article.bike-route {
   height: 100%;
 }
 
-.bike-route-col1 table,
-td {
-  width: 100%;
-  border: 1px solid gray;
-  border-collapse: collapse;
-}
-
 .bike-route-table {
   margin: 5px 0;
   background: rgb(240, 240, 240);
 }
 
+.bike-route-table table {
+  width: 100%;
+  border: 1px solid gray;
+  border-collapse: collapse;
+}
+
 .bike-route-table td {
   padding: 7px 6px;
+  border: 1px solid gray;
+}
+.bike-route-table td:nth-child(even) {
+  text-align: center;
 }
 
 .bike-route-table tr:nth-child(odd) {
@@ -602,15 +607,12 @@ td {
 
 .bike-route-map-completed {
   margin: 5px 5px 10px;
-  /* flex: 1 1 45%; */
-  /* width: 171px; */
-  /* aspect-ratio: 1/1; */
-  height: 171px;
+  flex: 1 1 45%;
+  height: auto;
 }
 
 .route-map {
   width: 100%;
-  /* height: 100%; */
   display: inline-block;
   border: 1px solid gray;
   border-radius: 10px;
@@ -658,7 +660,7 @@ table.leaderboard th {
 table.leaderboard td {
   padding: 7px 5px;
   text-align: center;
-  border-bottom: 1px solid rgb(117, 117, 117);
+  border: 1px solid rgb(117, 117, 117);
 }
 
 table.leaderboard td.points {
@@ -807,7 +809,7 @@ table.leaderboard tr:hover {
 
   .bike-route-map-completed {
     margin: 5px 5px 10px;
-    height: 156px;
+    height: auto;
   }
 
   .modal-content {
